--- a/product-microservice-dev.properties
+++ b/product-microservice-dev.properties
@@ -1,4 +1,3 @@
 booking.properties=Product Profile Dev
-spring.data.mongodb.uri=mongodb://127.0.0.1:27017/productdb
-app.testProp= Property of Test
+app.testProp= Property of Test Updated for bus and Message Broker
 
